--- a/style.css
+++ b/style.css
@@ -1,1 +1,66 @@
-/* This is where the CSS will go */
+body, 
+h1,
+p {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: url(./img/background.jpg) no-repeat fixed center;
+    background-size: cover;
+    backdrop-filter: blur(1.5px);
+}
+
+.container {
+    height: 700px;
+    width: 1200px;
+    display: flex;
+}
+
+.right-side {
+    flex: 1.5 0 0;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.left-side {
+    flex: 1 0 0;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    background: url(./img/girl.jpg) no-repeat 40% 20%;
+    background-size: auto 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+/* img {
+    flex: 1 0 0;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    height: 700px;
+    width: 50px;
+    object-fit: cover;
+    object-position: 35%;
+} */
+
+.logo {
+    background-color: rgb(0, 0, 0, 0.4);
+    padding: 15px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+h1 {
+    color: white;
+}
+
+
+
